--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,13 @@
 body {
   background-color: white;
   color: black;
-  font-family: sans-serif;
+  font-size: 2em;
+  font-family: 'Cute Font', cursive;
+  /* font-family: 'Open Sans Condensed', sans-serif; */
+  /* font-family: 'Anton', sans-serif; */
+  /* font-family: 'Lobster', cursive; */
+}
+
+#add-book {
+  background-color: pink;
 }
